Added bootstrap to master.blade, added .less files for styling and watcher to convert it to .css automatically upon save.

--- a/resources/assets/sass/less-addins/sticky-footer.less
+++ b/resources/assets/sass/less-addins/sticky-footer.less
@@ -1,10 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
-/* Navbar fixed top styles */
-body {
-  padding-top: 70px;
-}
 /* Sticky footer styles */
-html {
+html{
   position: relative;
   min-height: 100%;
 }
@@ -17,12 +12,6 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
+  //height: 60px;
   background-color: #f5f5f5;
-}
-html body {
-  font-family: 'Raleway', sans-serif;
-}
-html body .footer {
-  padding: 15px 0 5px;
-  text-align: right;
 }
