--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -11,12 +11,30 @@
 html {
   body {
     font-family: 'Raleway', sans-serif;
-    .footer {
+    footer.footer {
       padding: 15px 0 5px;
       text-align: right;
+      border-color: #e7e7e7;
+      border-top-width: 1px;
     }
     .content-header {
       text-align: center;
+    }
+    
+    .sidebar {
+      position: absolute;
+      float: left;
+    }
+
+    .row-bottom-margin {
+      margin-bottom: 20px;
+    }
+
+    .btn-margin-top {
+      margin-top: 10px;
+    }
+    .btn-default {
+      background-color: #eee;
     }
   }
 }
