--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -14,8 +14,7 @@ html {
     footer.footer {
       padding: 15px 0 5px;
       text-align: right;
-      border-color: #e7e7e7;
-      border-top-width: 1px;
+      border-top: 1px solid #e7e7e7;
     }
     .content-header {
       text-align: center;
