Updated welcome page to show plans

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,3 +43,6 @@ html body .btn-margin-top {
 html body .btn-default {
   background-color: #eee;
 }
+html body .text-justified {
+  text-align: justify;
+}
