--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -35,8 +35,8 @@ html {
     .btn-default {
       background-color: #eee;
     }
-    .text-justified {
-      text-align: justify;
+    .rdo-block {
+      margin-bottom: 30px;
     }
   }
 }
