--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -38,5 +38,12 @@ html {
     .rdo-block {
       margin-bottom: 30px;
     }
+    #card-details-table {
+      tr {
+        td {
+          padding: 5px;
+        }
+      }
+    }
   }
 }
