--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -45,5 +45,10 @@ html {
         }
       }
     }
+    .align-right {
+      text-align: right;
+      float: right;
+      margin-right: 5px;
+    }
   }
 }
