Refactored code so BillingDetails and UserSettings fields are now in User table

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30,15 +30,12 @@ html body footer.footer {
 html body .content-header {
   text-align: center;
 }
-html body .sidebar {
-  position: absolute;
-  float: left;
-}
 html body .row-bottom-margin {
   margin-bottom: 20px;
 }
 html body .btn-margin-top {
   margin-top: 10px;
+  width: 170px;
 }
 html body .btn-default {
   background-color: #eee;
