--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -3,7 +3,6 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 // Variables
 @import "less-addins/_variables";
-
 @import "less-addins/navbar-fixed-top";
 @import "less-addins/sticky-footer";
 
@@ -19,18 +18,12 @@ html {
     .content-header {
       text-align: center;
     }
-    
-    .sidebar {
-      position: absolute;
-      float: left;
-    }
-
     .row-bottom-margin {
       margin-bottom: 20px;
     }
-
     .btn-margin-top {
       margin-top: 10px;
+      width: 170px;
     }
     .btn-default {
       background-color: #eee;
