--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,3 +51,10 @@ html body .align-right {
   float: right;
   margin-right: 5px;
 }
+html body .statistics-container {
+  border: solid 1px #eee;
+  background-color: #f8f8f8;
+  border-radius: 3px;
+  padding: 0 0 25px;
+  margin: 20px 0;
+}
