--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -1,11 +1,10 @@
-
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 // Variables
-@import "less-addins/_variables";
+//@import "less-addins/_variables";
+// Add-in .less files
 @import "less-addins/navbar-fixed-top";
 @import "less-addins/sticky-footer";
-
 
 html {
   body {
@@ -42,6 +41,13 @@ html {
       text-align: right;
       float: right;
       margin-right: 5px;
+    }
+    .statistics-container {
+      border: solid 1px #eee;
+      background-color: #f8f8f8;
+      border-radius: 3px;
+      padding: 0 0 25px;
+      margin: 20px 0;
     }
   }
 }
