--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -49,5 +49,9 @@ html {
       padding: 0 0 25px;
       margin: 20px 0;
     }
+    .big-checkbox {
+      transform:scale(1.75, 1.75);
+      margin: 0 5px;
+    }
   }
 }
