--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,6 +21,9 @@ body {
 }
 html body {
   font-family: 'Raleway', sans-serif;
+  background-image: url("../img/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 html body footer.footer {
   padding: 15px 0 5px;
@@ -36,6 +39,9 @@ html body .row-bottom-margin {
 html body .btn-margin-top {
   margin-top: 10px;
   width: 170px;
+}
+html body .btn-margin-right {
+  margin-right: 5px;
 }
 html body .btn-default {
   background-color: #eee;
@@ -61,4 +67,8 @@ html body .statistics-container {
 html body .big-checkbox {
   transform: scale(1.75, 1.75);
   margin: 0 5px;
+}
+html body .well {
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.2);
 }
