--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -9,6 +9,9 @@
 html {
   body {
     font-family: 'Raleway', sans-serif;
+    background-image: url("../img/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     footer.footer {
       padding: 15px 0 5px;
       text-align: right;
@@ -23,6 +26,9 @@ html {
     .btn-margin-top {
       margin-top: 10px;
       width: 170px;
+    }
+    .btn-margin-right {
+      margin-right: 5px;
     }
     .btn-default {
       background-color: #eee;
@@ -52,6 +58,10 @@ html {
     .big-checkbox {
       transform:scale(1.75, 1.75);
       margin: 0 5px;
+    }
+    .well {
+      margin: 0 auto;
+      background-color: rgba(255, 255, 255, 0.2);
     }
   }
 }
