--- a/public/css/app.css
+++ b/public/css/app.css
@@ -72,3 +72,6 @@ html body .well {
   margin: 0 auto;
   background-color: rgba(255, 255, 255, 0.2);
 }
+html body .well-margin-bottom {
+  margin-bottom: 20px;
+}
