--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -63,5 +63,8 @@ html {
       margin: 0 auto;
       background-color: rgba(255, 255, 255, 0.2);
     }
+    .well-margin-bottom {
+      margin-bottom: 20px;
+    }
   }
 }
