--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -5,6 +5,7 @@
 // Add-in .less files
 @import "less-addins/navbar-fixed-top";
 @import "less-addins/sticky-footer";
+@import "less-addins/carousel";
 
 html {
   body {
@@ -65,6 +66,26 @@ html {
     }
     .well-margin-bottom {
       margin-bottom: 20px;
+    }
+    .well-reduce-padding {
+      padding: 10px;
+      .sm-text {
+        font-size: smaller;
+      }
+    }
+    .jcarousel-wrapper {
+      margin: 0 auto;
+      width: 100%;
+      height: auto;
+      border: none;
+      .jcarousel {
+        margin:0;
+        width:100%;
+        border: none;
+        .well {
+          margin: 0 5px;
+        }
+      }
     }
   }
 }
