--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -60,9 +60,16 @@ html {
       transform:scale(1.75, 1.75);
       margin: 0 5px;
     }
+    .smaller {
+      font-size: smaller;
+      margin-top: 15px;
+    }
     .well {
       margin: 0 auto;
       background-color: rgba(255, 255, 255, 0.2);
+    }
+    .well-welcome {
+      min-height: 260px;
     }
     .well-margin-bottom {
       margin-bottom: 20px;
