--- a/public/css/app.css
+++ b/public/css/app.css
@@ -63,27 +63,27 @@ body {
 .jcarousel-control-prev,
 .jcarousel-control-next {
   position: absolute;
-  top: 200px;
-  width: 30px;
+  top: 160px;
+  width: 25px;
   height: 30px;
   text-align: center;
-  background: #4E443C;
+  background: #666;
   color: #fff;
   text-decoration: none;
   text-shadow: 0 0 1px #000;
   font: 24px/27px Arial, sans-serif;
-  -webkit-border-radius: 30px;
+  /*-webkit-border-radius: 30px;
   -moz-border-radius: 30px;
-  border-radius: 30px;
+  border-radius: 30px;*/
   -webkit-box-shadow: 0 0 2px #999;
   -moz-box-shadow: 0 0 2px #999;
   box-shadow: 0 0 2px #999;
 }
 .jcarousel-control-prev {
-  left: -50px;
+  left: -2px;
 }
 .jcarousel-control-next {
-  right: -50px;
+  right: -2px;
 }
 .jcarousel-control-prev:hover span,
 .jcarousel-control-next:hover span {
