Subscription update() working. Moved view invoices button to left sidebar, updated views to use User activeSubscription function. Removed unused use statements.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -203,3 +203,6 @@ html body .jcarousel-wrapper .jcarousel {
 html body .jcarousel-wrapper .jcarousel .well {
   margin: 0 5px;
 }
+html body .stripe-button-el {
+  display: none;
+}
