--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -73,6 +73,10 @@ html {
     }
     .well-margin-bottom {
       margin-bottom: 20px;
+      padding-top: 15px;
+      h2 {
+        margin-top: 0;
+      }
     }
     .well-reduce-padding {
       padding: 10px;
