--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -101,5 +101,26 @@ html {
     .stripe-button-el {
       display: none;
     }
+    .table-white-background {
+      background-color: whitesmoke;
+    }
+    .table-top {
+      margin: 0;
+      /*border: none;
+      border-radius: 10px 10px 0 0;*/
+      th, td {
+        width: 25%;
+      }
+    }
+    .table-bottom {
+      /*border: none;
+      border-radius: 0 0 10px 10px;*/
+      th, td {
+        width: 12.5%;
+      }
+      .three-x-width {
+        width: 37.5%;
+      }
+    }
   }
 }
