--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -51,10 +51,9 @@ html {
     }
     .statistics-container {
       border: solid 1px #eee;
-      background-color: #f8f8f8;
+      background-color: rgba(248, 248, 248, 0.5);
       border-radius: 3px;
       padding: 0 0 25px;
-      margin: 20px 0;
     }
     .big-checkbox {
       transform:scale(1.75, 1.75);
@@ -101,20 +100,16 @@ html {
     .stripe-button-el {
       display: none;
     }
-    .table-white-background {
-      background-color: whitesmoke;
+    .table-transparent-background {
+      background-color: rgba(248, 248, 248, 0.5);
     }
     .table-top {
       margin: 0;
-      /*border: none;
-      border-radius: 10px 10px 0 0;*/
       th, td {
         width: 25%;
       }
     }
     .table-bottom {
-      /*border: none;
-      border-radius: 0 0 10px 10px;*/
       th, td {
         width: 12.5%;
       }
