--- a/resources/assets/sass/app.less
+++ b/resources/assets/sass/app.less
@@ -117,5 +117,16 @@ html {
         width: 37.5%;
       }
     }
+    .charge-table {
+      .thin-column {
+        width: 17%;
+      }
+    }
+    .admin-h2 {
+      margin-bottom: 20px;
+    }
+    .admin-btn {
+      margin-bottom: 20px;
+    }
   }
 }
